--- a/assets/css/chamada.css
+++ b/assets/css/chamada.css
@@ -45,7 +45,8 @@ h1 {
     text-decoration: none;
     margin-top: 30px;
     border: 3px solid #9ad7e2;
-    width: 250px;
+    min-width: 220px;
+    max-width: 250px;
     padding: 30px 0;
     text-align: center;
     transition: ease-in-out .3s;
@@ -75,4 +76,62 @@ h1 {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+
+
+@media only screen and (max-width: 1035px) {
+    
+    .conteudo__chamada {
+
+        background-image: none;
+    }
+
+    .conteudo__chamada___info {
+
+        width: 100%;
+        text-align: center;
+    }
+
+    .conteudo__chamada___info h2 {
+
+        margin: 25px 0;
+    }
+    
+    .conteudo__chamada___info p {
+    
+        margin: 25px 0;
+    }
+
+    .botoes {
+
+        margin: auto;
+        width: 75%;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+
+    h1 {
+
+        font-size: 3rem
+    }
+
+    .conteudo__chamada___info h2 {
+
+        font-size: 2rem;
+    }
+
+    .conteudo__chamada___info p {
+
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+
+    h1 {
+
+        font-size: 2.5rem;
+        font-weight: 800;
+    }
 }
