--- a/assets/css/servicos.css
+++ b/assets/css/servicos.css
@@ -19,7 +19,7 @@
 
     margin-top: 4rem;
     text-align: center;
-    width: 700px;
+    max-width: 700px;
     margin: auto;
     list-style: none;
 }
